--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -1,4 +1,4 @@
-<h1>Список Инструментов</h1>
+<h1>Список инструментов</h1>
 <div class="saved-tools">
   <div class="saved-tool" *ngFor="let tt of toolTypes">
     <img class="saved-tool__img" *ngIf="!!tt.imgRefenrence" src={{tt.imgRefenrence}} alt="">
