edit and delete tools

--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
@@ -175,7 +175,7 @@ h1 {
     text-align: center;
     &__img {
         // width: 80%;
-        max-height: 160px;
+        height: 80%;
     }
     &__name {
         margin-top: 10px;
