--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -6,12 +6,12 @@
       {{tt.name}}
     </p>
     <div class="saved-tool__btns">
-      <button>
+      <button class="saved-tools__edit" (click)="editToolType(tt)">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M20.625 19.5938H3.375C2.96016 19.5938 2.625 19.9289 2.625 20.3438V21.1875C2.625 21.2906 2.70937 21.375 2.8125 21.375H21.1875C21.2906 21.375 21.375 21.2906 21.375 21.1875V20.3438C21.375 19.9289 21.0398 19.5938 20.625 19.5938ZM6.03984 17.625C6.08672 17.625 6.13359 17.6203 6.18047 17.6133L10.1227 16.9219C10.1695 16.9125 10.2141 16.8914 10.2469 16.8563L20.182 6.92109C20.2038 6.89941 20.221 6.87366 20.2328 6.8453C20.2445 6.81695 20.2506 6.78656 20.2506 6.75586C20.2506 6.72516 20.2445 6.69477 20.2328 6.66642C20.221 6.63806 20.2038 6.61231 20.182 6.59063L16.2867 2.69297C16.2422 2.64844 16.1836 2.625 16.1203 2.625C16.057 2.625 15.9984 2.64844 15.9539 2.69297L6.01875 12.6281C5.98359 12.6633 5.9625 12.7055 5.95312 12.7523L5.26172 16.6945C5.23892 16.8201 5.24707 16.9493 5.28545 17.071C5.32384 17.1927 5.39132 17.3032 5.48203 17.393C5.63672 17.543 5.83125 17.625 6.03984 17.625V17.625Z" fill="black"/>
         </svg>      
       </button>
-      <button>
+      <button class="saved-tools__delete" (click)="deleteToolType(tt)">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5.00293 20C5.00293 21.103 5.89993 22 7.00293 22H17.0029C18.1059 22 19.0029 21.103 19.0029 20V8H21.0029V6H17.0029V4C17.0029 2.897 16.1059 2 15.0029 2H9.00293C7.89993 2 7.00293 2.897 7.00293 4V6H3.00293V8H5.00293V20ZM9.00293 4H15.0029V6H9.00293V4ZM8.00293 8H17.0029L17.0039 20H7.00293V8H8.00293Z" fill="black"/>
           <path d="M9.00293 10H11.0029V18H9.00293V10ZM13.0029 10H15.0029V18H13.0029V10Z" fill="black"/>
@@ -24,50 +24,8 @@
     {{tt.info}} -->
   </div>
 </div>
-<!-- <table class="table">
-  <thead>
-    <tr>
-      <td>Название</td>
-      <td>Основой тип</td>
-      <td>Второстепенный тип</td>
-      <td>Бренды</td>
-      <td>Услуги</td>
-      <td>Стоимость</td>
-      <td>Ссылка на картинку</td>
-      <td></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let tt of toolTypes">
-      <ng-template [ngIf]="toolType?.id != tt.id" [ngIfElse]="editToolTypeTemplate">
-      <ng-template [ngIf]="toolType?.id != tt.id">
-        <td>{{tt?.name}}</td>
-        <td>{{tt?.mainType}}</td>
-        <td>{{tt?.secondaryType}}</td>
 
-        <td>
-          <div *ngFor="let brand of tt.brands">
-            {{brand}}
-          </div>
-        </td>
-
-        <td></td>
-        <td>
-        <td *ngFor="let key of tt.serveCost.keys">
-          {{key}}
-        </td>
-        <td *ngFor="let value of tt.serveCost.values">
-          {{value}}
-        </td>
-        <td>{{tt?.imgRefenrence}}</td>
-        <td>
-          <button class="btn btn-sm btn-primary" (click)="editToolType(tt)">Изменить</button>
-          <button class="btn btn-sm btn-danger" (click)="deleteToolType(tt)">Удалить</button>
-        </td>
-      </ng-template>
-    </tr>
-  </tbody>
-</table> -->
+<!-- Создание инструмента -->
 <input *ngIf="!addToolFlag;" type="button" value="Создать инструмент" class="addPartBtn" (click)="addToolType()" />
 
 <!--шаблон для редактирования инструментов-->
@@ -184,14 +142,6 @@
         <div *ngFor="let key of serveCostLength; index as i" class="price__row old-row">
           <input type="text" [(ngModel)]="toolType.serves[i]">
           <input type="text" [(ngModel)]="toolType.costs[i]">
-          <!-- <button>
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 7.125H21.75V8.625H12V7.125Z" fill="black"/>
-              <path d="M8.25 12H21.75V13.5H8.25V12Z" fill="black"/>
-              <path d="M8.25 16.875H21.75V18.375H8.25V16.875Z" fill="black"/>
-              <path d="M9 7.125H6V4.125H4.5V7.125H1.5V8.625H4.5V11.625H6V8.625H9V7.125Z" fill="black"/>
-            </svg>
-          </button> -->
           <button (click)="removeRow(i)">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.00293 20C5.00293 21.103 5.89993 22 7.00293 22H17.0029C18.1059 22 19.0029 21.103 19.0029 20V8H21.0029V6H17.0029V4C17.0029 2.897 16.1059 2 15.0029 2H9.00293C7.89993 2 7.00293 2.897 7.00293 4V6H3.00293V8H5.00293V20ZM9.00293 4H15.0029V6H9.00293V4ZM8.00293 8H17.0029L17.0039 20H7.00293V8H8.00293Z" fill="black"/>
@@ -225,15 +175,10 @@
         <div class="popup__body">
           <div class="popup__content">
             <div class="popup__header">
-              <form [formGroup]="newImageForm" (change)="onSubmit(newImageForm.value)">
 
-                <!-- <div> -->
-                    <label class="popup__upload" for="newImage">Загрузить картинку</label>
-                    <input type="file" id="newImage" formControlName="newImage" (change)="onSelectFile($event)" style="display: none;">
-                <!-- </div> -->
-              
-                <!-- <button type="submit">upload</button> -->
-              
+              <form [formGroup]="newImageForm" (change)="onSubmit(newImageForm.value)">
+                <label class="popup__upload" for="newImage">Загрузить картинку</label>
+                <input type="file" id="newImage" formControlName="newImage" (change)="onSelectFile($event)" style="display: none;">
               </form>
 
               <button class="popup__close" (click)="chooseImg(false)">X</button>
@@ -244,26 +189,7 @@
                 <button (click)="deleteImage($event)">X</button>
                 <img src={{img}} alt="" (click)="addImage($event, img)">
               </div>
-                <!-- <img src="../../../assets/img/tools/angle-grinder.png" alt="" (click)='addImage($event)'>
-                <img src="../../../assets/img/tools/drill.png" alt="" (click)='addImage($event)'>
-                <img src="../../../assets/img/tools/perforator.png" alt="" (click)='addImage($event)'>
-                <img src="../../../assets/img/tools/screwdriver.png" alt="">
-                <img src="../../../assets/img/tools/perforator.png" alt="">
-                <img src="../../../assets/img/tools/screwdriver.png" alt="">
-                <img src="../../../assets/img/tools/angle-grinder.png" alt="">
-                <img src="../../../assets/img/tools/drill.png" alt="">
-                <img src="../../../assets/img/tools/perforator.png" alt="">
-                <img src="../../../assets/img/tools/screwdriver.png" alt="">
-                <img src="../../../assets/img/tools/perforator.png" alt="">
-                <img src="../../../assets/img/tools/screwdriver.png" alt="">
-                <img src="../../../assets/img/tools/angle-grinder.png" alt="">
-                <img src="../../../assets/img/tools/drill.png" alt="">
-                <img src="../../../assets/img/tools/perforator.png" alt="">
-                <img src="../../../assets/img/tools/screwdriver.png" alt="">
-                <img src="../../../assets/img/tools/perforator.png" alt="">
-                <img src="../../../assets/img/tools/screwdriver.png" alt=""> -->
             </div>
-            
           </div>
         </div>
       </div>
