--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -198,7 +198,7 @@
 
     <hr>
 
-    <quill-editor [(ngModel)]="quillValue"></quill-editor>
+    <quill-editor [(ngModel)]="this.toolType.info"></quill-editor>
     <!-- <pre>{{quillValue}}</pre> -->
 
     <div>
