--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
@@ -1,7 +1,9 @@
-<p>tools-page works!</p>
 <div class="container">
-    
+    {{type}}
 </div>
+    <div *ngFor="let tool of res$">
+        {{tool}}
+    </div>
 <!-- <input type="radio" name="tab-btn" id="tab-electro">
 <label for="tab-electro">Электроинструмент</label>
 <input type="radio" name="tab-btn" id="tab-electro">
@@ -13,8 +15,8 @@
 <input type="radio" name="tab-btn" id="tab-electro">
 <label for="tab-electro">Электроинструмент</label>
 <input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>sd
+<input type="radio" name="tab-btn" id="tab-electro"> 
 <label for="tab-electro">Электроинструмент</label>
 <input type="radio" name="tab-btn" id="tab-electro">
 <label for="tab-electro">Электроинструмент</label> -->
