--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
@@ -1,22 +1,6 @@
 <div class="container">
     {{type}}
 </div>
-    <div *ngFor="let tool of res$">
-        {{tool}}
+    <div *ngFor="let toolName of res$.names">
+        {{toolName}}
     </div>
-<!-- <input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label>sd
-<input type="radio" name="tab-btn" id="tab-electro"> 
-<label for="tab-electro">Электроинструмент</label>
-<input type="radio" name="tab-btn" id="tab-electro">
-<label for="tab-electro">Электроинструмент</label> -->
