--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/">На сайт</a>
     </h1>
 
-    <ul *ngIf="auth.isAuth() else login">
+    <ul *ngIf="auth.isToken() else login">
       <!-- <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'edit-tools']">Редактировать инструменты</a>
       </li> -->
