--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
@@ -294,6 +294,9 @@ input[type=search] {
 
 
 .footer {
+    // position: absolute;
+    // bottom: 0;
+    // left: 0;
     // position: relative;
     & > img {
         display: block;
