--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -26,7 +26,7 @@
                 <div class="drop-menu">
                     <div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['electro']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'electro']">
                                 Электроинструмент
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['benzo']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'benzo']">
                                 Бензоинструмент
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['garden']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'garden']">
                                 Садовая техника
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +81,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['compressor']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'compressor']">
                                 Компрессоры
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -91,7 +91,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['generator']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'generator']">
                                 Генераторы
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -101,7 +101,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['welding']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'welding']">
                                 Сварочная техника
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,7 +111,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['heatgun']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'heatgun']">
                                 Тепловые пушки
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +121,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['rest']">
+                            <a class="drop-menu__link" [routerLink]="['tools', 'rest']">
                                 Техника для отдыха
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
