--- a/RemTool/ClientApp/src/app/main-page/main-page.component.html
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.html
@@ -9,17 +9,17 @@
 <section id="categories" class="we-repair">
     <h2 class="main-h2">Мы ремонтируем</h2>
     <div class="we-repair__row row-2-col">
-        <a class="we-repair__electric" href="#">Электроинструмент</a>
-        <a class="we-repair__benzo" href="#">Бензоинструмент</a>
+        <a class="we-repair__electric" [routerLink]="['electro']">Электроинструмент</a>
+        <a class="we-repair__benzo" [routerLink]="['benzo']">Бензоинструмент</a>
         
     </div>
     <div class="we-repair__row row-3-col">
-        <a class="we-repair__welding" href="#">Сварочные аппараты</a>
-        <a class="we-repair__generators" href="#">Генераторы</a>
-        <a class="we-repair__compressor" href="#">Компрессоры</a>
-        <a class="we-repair__rest" href="#">Техника для отдыха</a>
-        <a class="we-repair__garden" href="#">Садовая техника</a>
-        <a class="we-repair__heater" href="#">Тепловые пушки</a>
+        <a class="we-repair__welding" [routerLink]="['welding']">Сварочные аппараты</a>
+        <a class="we-repair__generators" [routerLink]="['generator']">Генераторы</a>
+        <a class="we-repair__compressor" [routerLink]="['compressor']">Компрессоры</a>
+        <a class="we-repair__rest" [routerLink]="['rest']">Техника для отдыха</a>
+        <a class="we-repair__garden" [routerLink]="['garden']">Садовая техника</a>
+        <a class="we-repair__heater" [routerLink]="['heatgun']">Тепловые пушки</a>
     </div>
     
 </section>
